[package]
name = "stupid_utils"
version = "0.2.7"
edition = "2021"
authors = ["wefcdse"]
description = "A crate that provides some simple and maybe stupid or useful tools"
repository = "https://github.com/wefcdse/stupid_utils"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["utils"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
