[package]
name = "stupid_utils"
version = "0.2.9"
edition = "2021"
authors = ["wefcdse"]
description = "A crate that provides some simple and maybe stupid or useful tools"
repository = "https://github.com/wefcdse/stupid_utils"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["utils"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
functional_trait = { version = "1.0.1", optional = true }
# functional_trait = { path = "../functional_trait", optional = true }

[features]
default = ["dependent"]
dependent = ["functional_trait"]
functional_trait = ["dep:functional_trait"]

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
