[package]
name = "stupid_utils"
version = "0.5.0"
edition = "2021"
authors = ["wefcdse"]
description = "A crate that provides some simple and maybe stupid or useful tools"
repository = "https://github.com/wefcdse/stupid_utils"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["utils"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
functional_trait = { version = "1.1.1", optional = true }
# functional_trait = { path = "../functional_trait", optional = true }

[features]
default = ["dependent", "build_script"]

disable_non_zerocost = []
dependent = ["functional_trait"]
build_script = ["fn_apply", "tuple_index"]

functional_trait = ["dep:functional_trait"]
fn_apply = []
tuple_index = []

# docs.rs-specific configuration
[package.metadata.docs.rs]
features = ["dependent", "build_script"]
# document all features
all-features = false
no-default-features = false
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
